# xsdata-pydantic

./: .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  MANIFEST.in  README.md  README.rst  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/: pull_request_template.md
.github/workflows/: publish.yml  tests.yml
docs/: bindings.md  bindings.rst  changelog.md  codegen.md  codegen.rst  conf.py  index.md  index.rst  installation.md  installation.rst  issues.md  issues.rst
tests/: test_bindings.py  test_compat.py  test_generator.py
tests/fixtures/: common.py  pydantic.conf.xml
tests/fixtures/po/: __init__.py  models.py
tests/fixtures/schemas/: po.xsd
xsdata_pydantic/: bindings.py  compat.py  datatype.py  fields.py  generator.py
xsdata_pydantic/base_model/: bindings.py  compat.py  generator.py
xsdata_pydantic/hooks/: class_type.py  cli.py
