[metadata]
name = xsdata_pydantic
version = attr: xsdata_pydantic.__version__
description = xsdata pydantic plugin
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/tefra/xsdata-pydantic
author = Christodoulos Tsoulloftas
author_email = "chris@komposta.net",
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Code Generators
    Topic :: Text Processing :: Markup :: XML
keywords = xsd,wsdl,schema,binding,xml,json,dataclasses,generator,cli,pydantic
project_urls =
    Source=https://github.com/tefra/xsdata-pydantic

[options]
packages = xsdata_pydantic
install_requires =
    pydantic
    xsdata>=21.8
python_requires = >=3.7
include_package_data = True

[options.entry_points]
xsdata.plugins.class_types =
    xsdata_pydantic = xsdata_pydantic.hooks.class_type
xsdata.plugins.cli =
    xsdata_pydantic = xsdata_pydantic.hooks.cli

[options.extras_require]
cli =
    xsdata[cli]>=21.8
docs =
    furo
    sphinx
    sphinx-autobuild
lxml =
    lxml>=4.4.1
soap =
    requests
test =
    codecov
    lxml
    pre-commit
    pytest
    pytest-cov
    tox

[flake8]
exclude = tests/*
max-line-length = 88
ignore = W503,ANN101,ANN102,E203

[doc8]
max-line-length = 88

[tool:pytest]
addopts = --color=yes
